fixed integration with test module uralintern
